CHANGES -- trio


The changes listed without a name attributed to them were most likely done by
Bjorn Reese and/or Daniel Stenberg.

Version 1.11 - 2005/01/15
-------------------------
* Karl Bochert
  Fixed compilation warnings on Borland C++.

* Removed any occurrence of #elif because Borland C++ reports wrong line
  numbers when they are present (reported by Karl Bochert).

* David Byron
  Added trio_asprintfv.

* Brian Chapman
  Fixed Mac OS X compilation.

* David Byron
  Fixed several compiler warnings.

* Fixed printing of out-of-range arguments for %hhd and %hd. These arguments
  can be out of range because of default integer promotion.

* Bob Friesenhahn
  Fixed installation of header files.

* Joe Orton
  Added SHELL to Makefile.in to avoid problems with CShells.

* Shaun Tancheff
  Fixed regresion tests for MSVC.

* Craig Berry
  Fixed the VMS C99 workaround.


Version 1.10 - 2003/03/06
-------------------------
* Rearranged some include files to accommodate large file support (reported by
  Albert Chin-A-Young).

* Added support for SunOS 4.1.x lack of strerror, tolower, and toupper
  (reported by Peter McCluskey).

* Fixed pedantic compilation with TRIO_MINIMAL.

* Jose Kahan
  Moved <limits.h> to avoid redefinition problems.

* Fixed hex-float exponents (reported by Matthias Clasen).

* Fixed handling of negative width and precision via paramters (reported by
  Jacob Navia).

* Nigel Hall
  Fixed TRIO_VA_START for VMS.

* Rune Enggaard Lausen
  Fixed compilation for Borland C++ Builder.

* Fixed precision of hex-float numbers (reported by James Antill).

* Fixed plus sign only to be added for signed numbers.

* Fixed printing of integers with value and precision of zero (reported by
  James Antill).

* Fixed %#.o to only print one zero if the value is zero (reported by James
  Antill).

* Rewrote check for IEEE compilation option to remove dependency on additional
  scripts.

* Mehdi Lavasani